--- a/styles/main.css
+++ b/styles/main.css
@@ -40,7 +40,7 @@ header {
   border-top: 1px solid rgba(4, 8, 60, 0.2);
   box-shadow: 0 -25px 30px -35px #04083c, inset 2px 8px 14px -2px white;
   margin: 0 auto;
-  max-width: 1280px;
+  max-width: 1000px;
   padding: 5%;
   width: 75%; }
 
@@ -241,7 +241,7 @@ h5 {
   color: #5a0014;
   font-size: 4.2em; }
 
-.nav {
+h6, .nav {
   font-size: 2.7em; }
 
 section li, section p {
@@ -266,9 +266,6 @@ pre {
 
 q {
   quotes: "\201C" "\201D" "\2018" "\2019"; }
-
-small {
-  font-size: 80%; }
 
 .press-heavy, h4 {
   text-shadow: 1px 1px 2px white, -1px -1px 1px rgba(2, 5, 36, 0.5); }
