--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -86,6 +86,11 @@ footer
   height: 20%
   min-height: 250px
 
+.activity
+  float: left
+  height: 350px
+  width: 33.3333333333%
+
 // ~~~~~~~~~~NAVIGATION~~~~~~~~~~
 
 .nav
@@ -340,8 +345,8 @@ ul, ol
   margin: 0
 
 section li
-  text-align: left
-  margin-left: 20%
+  // text-align: left
+  // margin-left: 20%
 
 
 // ~~~~~~~~~~TABLES~~~~~~~~~~
@@ -353,18 +358,6 @@ table
 
 
 // ~~~~~~~~~~TYPOGRAPHY~~~~~~~~~~
-
-@font-face
-  font-family: 'Riesling'
-  src: url('../fonts/riesling.ttf')
-
-@font-face  
-  font-family: "Caslon Antique"
-  src: url('../fonts/caslon-antique.ttf')
-
-@font-face  
-  font-family: "Treasury Platinum"
-  src: url('../fonts/treasury-platinum.ttf')
 
 @font-face  
   font-family: "Edwardian Script"
