--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -36,9 +36,6 @@ html
   font-size: 62.5%
   line-height: 1.5
 
-a
-  transition: all .25s ease-in-out
-
 body
   color: $blue
   margin: 0  // Remove default margin.
@@ -71,7 +68,7 @@ header
   box-shadow: 0 -25px 30px -35px fade-out($blue, 0), inset 2px 8px 14px -2px $white
   margin: 0 auto
   max-width: $max-width + px
-  padding: 5%
+  padding: 2.5% 5%
   width: 75%
 
 section
@@ -84,7 +81,7 @@ footer
   background: url('../img/mountain.png') bottom center no-repeat
   background-size: 40% auto
   height: 20%
-  min-height: 250px
+  min-height: 150px
 
 .activity
   float: left
@@ -95,17 +92,17 @@ footer
 
 .nav
   display: inline-block
-  padding-left: 1%
+  padding-left: 2%
   margin-bottom: 3em
   li
     float: left
-    padding-right: 1%
-    & a:after
-      color: $blue
-      content: ' }'
-    & a:before
-      color: $blue
-      content: '{ '
+    padding-right: 2%
+    // & a:after
+    //   color: $blue
+    //   content: ' }'
+    // & a:before
+    //   color: $blue
+    //   content: '{ '
 
 // ~~~~~~~~~~CLEARFIX~~~~~~~~~~
 
@@ -317,12 +314,13 @@ audio:not([controls])
 a
   color: $blue
   text-decoration: none
-  
+  transition: all .25s ease-in-out
+
   // Address `outline` inconsistency between Chrome and other browsers.
   &:focus
     outline: thin dotted
     color: lighten($blue, 40%)
-    color: fade-out($blue, .5)
+    color: fade-out($blue, .6)
 
   // Improve readability when focused and also mouse hovered in all browsers.
   &:active, &:hover
@@ -330,11 +328,11 @@ a
 
   &:active
     color: lighten($blue, 30%)
-    color: fade-out($blue, .4)
+    color: fade-out($blue, .5)
 
   &:hover
     color: lighten($blue, 20%)
-    color: fade-out($blue, .3)
+    color: fade-out($blue, .4)
 
 
 // ~~~~~~~~~~LISTS~~~~~~~~~~
@@ -343,10 +341,6 @@ ul, ol
   list-style: none
   padding: 0
   margin: 0
-
-section li
-  // text-align: left
-  // margin-left: 20%
 
 
 // ~~~~~~~~~~TABLES~~~~~~~~~~
@@ -361,21 +355,20 @@ table
 
 @font-face  
   font-family: "Edwardian Script"
-  src: url('../fonts/edwardian-script.ttf')
+  src: url('../fonts/edwardian-script-webfont.eot')
+  src: url('../fonts/edwardian-script-webfont.eot') format('embedded-opentype'), url('../fonts/edwardian-script-webfont.woff') format('woff'), url('../fonts/edwardian-script-webfont.ttf') format('truetype'), url('../fonts/edwardian-script-webfont.svg') format('svg')
+
 
 @font-face  
   font-family: "Champagne Limousines"
-  src: url('../fonts/champagne-limousines.ttf')
+  src: url('../fonts/champagne-limousines-webfont.eot')
+  src: url('../fonts/champagne-limousines-webfont.eot') format('embedded-opentype'), url('../fonts/champagne-limousines-webfont.woff') format('woff'), url('../fonts/champagne-limousines-webfont.ttf') format('truetype'), url('../fonts/champagne-limousines-webfont.svg') format('svg')
 
-body
-  font-family: "Champagne Limousines"
+body, h2, h3, h5
+  font-family: 'Champagne Limousines'
 
 header, h4
   font-family: 'Edwardian Script', cursive
-
-
-h2, h3, h5
-  font-family: 'Champagne Limousines', cursive
 
 h1, h2, h3, h4, h5, h6
   font-weight: 400
@@ -392,8 +385,11 @@ h4
 h5
   font-size: $base-size * 1.4
 
-h6, .nav
+h6
   font-size: $base-size * .9
+
+.nav
+  font-size: $base-size * .75
 
 section
   li, p
