--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -85,7 +85,7 @@ footer
 
 .activity
   float: left
-  height: 350px
+  min-height: 300px
   width: 33.3333333333%
 
 // ~~~~~~~~~~NAVIGATION~~~~~~~~~~
