--- a/styles/main.css
+++ b/styles/main.css
@@ -237,7 +237,7 @@ section li, section p {
   font-size: 2.25em; }
 
 h1 {
-  margin: 0 0 -20px; }
+  margin: 0 0 -20px -20px; }
 
 h2, h3 {
   margin: 0; }
