adjusted again for ie

--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -9,7 +9,7 @@ $press-hvy: 1px 1px 2px $white, -1px -1px 1px fade-out(darken($blue, 5%), .5)
 $press-lt: 1px 1px 1px $white
 $base-size: 3em
 
-$max-width: 1000
+$max-width: 1040
 $columns: 4
 
 $col-width: $max-width * .75
@@ -57,7 +57,7 @@ header
   display: block
   padding: 1.5em 3%
   margin: 0 auto
-  max-width: 500px
+  max-width: 560px
   width: 50%
 
 .main
@@ -397,6 +397,7 @@ section
 
 h1
   margin: 0 0 -20px -20px
+  padding-right: 10px
 
 h2, h3
   margin: 0
