--- a/styles/main.css
+++ b/styles/main.css
@@ -27,7 +27,7 @@ header {
   display: block;
   padding: 1.5em 3%;
   margin: 0 auto;
-  max-width: 500px;
+  max-width: 560px;
   width: 50%; }
 
 .main {
@@ -37,7 +37,7 @@ header {
   border-top: 1px solid rgba(4, 8, 60, 0.2);
   box-shadow: 0 -25px 30px -35px #04083c, inset 2px 8px 14px -2px white;
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 1040px;
   padding: 2.5% 5%;
   width: 75%; }
 
@@ -237,7 +237,8 @@ section li, section p {
   font-size: 2.25em; }
 
 h1 {
-  margin: 0 0 -20px -20px; }
+  margin: 0 0 -20px -20px;
+  padding-right: 10px; }
 
 h2, h3 {
   margin: 0; }
