--- a/styles/main.css
+++ b/styles/main.css
@@ -237,8 +237,8 @@ section li, section p {
   font-size: 2.25em; }
 
 h1 {
-  margin: 0 0 -20px -20px;
-  padding-right: 10px; }
+  margin: 0 0 -20px;
+  padding-right: 30px; }
 
 h2, h3 {
   margin: 0; }
