--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -396,8 +396,8 @@ section
     font-size: $base-size * .75
 
 h1
-  margin: 0 0 -20px -20px
-  padding-right: 10px
+  margin: 0 0 -20px
+  padding-right: 30px
 
 h2, h3
   margin: 0
