--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -372,6 +372,7 @@ header, h4
 
 h1, h2, h3, h4, h5, h6
   font-weight: 400
+  overflow: visible
 
 h1
   font-size: $base-size * 3
@@ -398,6 +399,8 @@ section
 h1
   margin: 0 0 -20px
   padding-right: 30px
+  overflow: visible
+  zoom: 1
 
 h2, h3
   margin: 0
