--- a/styles/ie8-and-down.css
+++ b/styles/ie8-and-down.css
@@ -7,9 +7,6 @@ html {
   font-size: 62.5%;
   line-height: 1.5; }
 
-a {
-  transition: all 0.25s ease-in-out; }
-
 body {
   color: #04083c;
   margin: 0;
@@ -26,30 +23,30 @@ header {
   border: 1px solid #04083c;
   border-bottom-color: transparent;
   display: block;
-  padding: 1.5em 3%;
+  padding: 10px 20px;
   margin: 0 auto;
-  max-width: 500px;
-  width: 50%; }
+  width: 560px;
+}
 
 .main {
   background: white;
   background: url("../img/feathers.png");
   border-top: 1px solid rgba(4, 8, 60, 0.2);
   margin: 0 auto;
-  max-width: 1000px;
-  padding: 5%;
-  width: 75%; }
+  width: 880px;
+  padding: 40px;
+}
 
 section {
-  max-width: 800px;
+  width: 720px;
   margin: 0 auto;
-  width: 80%; }
+}
 
 footer {
   background: url("../img/mountain.png") bottom center no-repeat;
-  background-size: 40% auto;
-  height: 20%;
-  min-height: 250px; }
+  background-size: 400px auto;
+  height: 250px;
+}
 
 .activity {
   float: left;
@@ -58,24 +55,21 @@ footer {
 
 .nav {
   display: inline-block;
-  padding-left: 1%;
-  margin-bottom: 3em; }
-  .nav li {
+  padding-left: 10px;
+  margin-bottom: 50px;
+}
+
+.nav li {
     float: left;
-    padding-right: 1%; }
-    .nav li a:after {
-      color: #04083c;
-      content: " }"; }
-    .nav li a:before {
-      color: #04083c;
-      content: "{ "; }
+    padding-right: 10px;
+}
 
 .group {
   *zoom: 1; }
-  .group:before, .group:after {
+.group:before, .group:after {
     content: "";
     display: table; }
-  .group:after {
+.group:after {
     clear: both; }
 
 img {
