--- a/styles/ie8-and-down.css
+++ b/styles/ie8-and-down.css
@@ -20,7 +20,6 @@ body {
 header {
   background: white;
   background: url("../img/feathers.png");
-  border: 1px solid #04083c;
   border-bottom-color: transparent;
   display: block;
   padding: 10px 20px;
@@ -31,21 +30,20 @@ header {
 .main {
   background: white;
   background: url("../img/feathers.png");
-  border-top: 1px solid rgba(4, 8, 60, 0.2);
   margin: 0 auto;
   width: 880px;
   padding: 40px;
 }
 
-section {
+section, footer {
   width: 720px;
   margin: 0 auto;
 }
 
 footer {
   background: url("../img/mountain.png") bottom center no-repeat;
-  background-size: 400px auto;
-  height: 250px;
+  /*background-size: 400px auto;*/
+  /*height: 250px;*/
 }
 
 .activity {
