--- a/styles/ie8-and-down.css
+++ b/styles/ie8-and-down.css
@@ -42,10 +42,9 @@ section, .main {
 footer {
   background: white;
   background: url("../img/mountain-sm.png") bottom center no-repeat;
-  /*background-size: 880px 250px;*/
   border: none;
+  height: 200px;
   margin: 0 auto;
-  /*padding: 40px;*/
 }
 
 .activity {
