--- a/styles/ie8-and-down.css
+++ b/styles/ie8-and-down.css
@@ -43,8 +43,9 @@ footer {
   background: white;
   background: url("../img/mountain-sm.png") bottom center no-repeat;
   border: none;
-  height: 200px;
+  height: 184px;
   margin: 0 auto;
+  width: 880px;
 }
 
 .activity {
