--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -90,15 +90,12 @@ footer
 
 // ~~~~~~~~~~NAVIGATION~~~~~~~~~~
 
-#trial
-  color: $white
-
 .nav
   width: 100%
-  background-color: rgba(255, 255, 255, .95)
+  background-color: rgb(255, 255, 255)
   box-shadow: 0 10px 40px fade-out($blue, .8)
   position: fixed
-  padding: 15px 0 15px 20%
+  padding: 8px 0 8px 20%
   li
     float: left
     padding-right: 3%
