--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -68,7 +68,7 @@ header
   box-shadow: 0 -25px 30px -35px fade-out($blue, 0), inset 2px 8px 14px -2px $white
   margin: 0 auto
   max-width: $max-width + px
-  padding: 2.5% 5%
+  padding: 1% 5% 2.5% 5%
   width: 75%
 
 section
@@ -93,7 +93,7 @@ footer
 .nav
   width: 100%
   background-color: rgb(255, 255, 255)
-  box-shadow: 0 10px 40px fade-out($blue, .8)
+  box-shadow: 0 10px 40px fade-out($blue, .85)
   position: fixed
   padding: 8px 0 8px 20%
   li
