--- a/styles/main.css
+++ b/styles/main.css
@@ -57,15 +57,19 @@ footer {
   min-height: 300px;
   width: 33.33333%; }
 
-.nav {
+nav {
   width: 100%;
   background-color: white;
   box-shadow: 0 10px 40px rgba(4, 8, 60, 0.15);
-  position: fixed;
-  padding: 8px 0 8px 20%; }
-  .nav li {
-    float: left;
-    padding-right: 3%; }
+  padding: 10px 0;
+  position: fixed; }
+
+nav ul {
+  display: inline-block;
+  padding-left: 40px; }
+nav li {
+  float: left;
+  margin-right: 40px; }
 
 .group {
   *zoom: 1; }
@@ -233,7 +237,7 @@ h5 {
 h6 {
   font-size: 2.7em; }
 
-.nav {
+nav {
   font-size: 2.25em; }
 
 section li, section p {
@@ -268,5 +272,9 @@ q {
 .press-heavy, h4 {
   text-shadow: 1px 1px 2px white, -1px -1px 1px rgba(2, 5, 36, 0.5); }
 
-.press-light, .nav {
+.press-light, nav {
   text-shadow: 1px 1px 1px white; }
+
+.justify {
+  text-align: justify;
+  font-size: 1.95em; }
