--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -90,15 +90,20 @@ footer
 
 // ~~~~~~~~~~NAVIGATION~~~~~~~~~~
 
-.nav
+nav
   width: 100%
   background-color: rgb(255, 255, 255)
   box-shadow: 0 10px 40px fade-out($blue, .85)
+  padding: 10px 0
   position: fixed
-  padding: 8px 0 8px 20%
+
+nav
+  ul
+    display: inline-block
+    padding-left: 40px
   li
     float: left
-    padding-right: 3%
+    margin-right: 40px
 
 // ~~~~~~~~~~CLEARFIX~~~~~~~~~~
 
@@ -385,7 +390,7 @@ h5
 h6
   font-size: $base-size * .9
 
-.nav
+nav
   font-size: $base-size * .75
 
 section
@@ -425,11 +430,12 @@ q
 .press-heavy, h4
   text-shadow: $press-hvy
 
-.press-light, .nav
+.press-light, nav
   text-shadow: $press-lt
 
-
-
+.justify
+  text-align: justify
+  font-size: $base-size * .65
 
 
 
