--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -88,6 +88,30 @@ footer
   min-height: 300px
   width: 33.3333333333%
 
+
+
+.party-male, .party-female
+  // background-color: blue
+  float: left
+  margin: 10px 4%
+  
+  width: 42%
+
+
+
+.party-male
+  text-align: left
+
+
+.party-female
+  text-align: right
+
+.trial
+  // margin: 0 auto
+  // background-color: orange
+
+
+
 // ~~~~~~~~~~NAVIGATION~~~~~~~~~~
 
 nav
