--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -405,8 +405,11 @@ h6
 nav
   font-size: $base-size * .75
 
+p
+  font-size: $base-size * .65
+
 section
-  li, p
+  li
     font-size: $base-size * .75
 
 h1
@@ -453,7 +456,10 @@ q
 
 .justify
   text-align: justify
-  font-size: $base-size * .65
+
+.pull
+  float: left
+  width: 33.333333%
 
 
 
