--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -94,15 +94,12 @@ footer
   width: 42%
 
 .event
-  margin: 60px 0
+  margin: 10% 0
   width: 100%
 
 .details
   text-align: left
   width: 40%
-
-.venue
-  width: 60%
 
 .pull
   float: left
@@ -144,14 +141,23 @@ nav
 
 // ~~~~~~~~~~EMBEDDED CONTENT~~~~~~~~~~
 
-// Remove border when inside `a` element in IE 8/9.
+
 img
-  border: 0
+  border: 0 // Remove border when inside `a` element in IE 8/9.
+  border-radius: 10px
   display: block
 
 // Correct overflow displayed oddly in IE 9.
 svg:not(:root)
   overflow: hidden
+
+.us
+  width: 100%
+  margin-bottom: 10%
+
+.venue
+  width: 60%
+  margin-bottom: 3%
 
 
 // ~~~~~~~~~~FIGURES~~~~~~~~~~
